# controller/userController.js
@@ -118,3 +118,16 @@ exports.getLoggedInUserDetails = BigPromise(async (req, res, next) => {
         user,
     });
 });
+
+exports.changePassword = BigPromise(async (req, res, next) => {
+    const userId = req.user.id;
+    const user = await User.findById(userId).select("+password");
+    const checkOldPassword = await user.checkValidatedPassword(req.body.oldPassword);
+    if (!checkOldPassword) {
+        return next(new CustomError("old password is incorrect", 400));
+    }
+    user.password = req.body.password;
+    await user.save();
+    cookieToken(user, res);
+});
+
