# route/user.js
@@ -7,7 +7,8 @@ const {
     logout, 
     forgotPassword, 
     passwordReset,
-    getLoggedInUserDetails
+    getLoggedInUserDetails,
+    changePassword
 } = require('../controller/userController');
 
 const { isLoggedIn } = require('../middleware/user');
@@ -18,5 +19,6 @@ router.route('/logout').get(logout);
 router.route('/forgotpassword').post(forgotPassword);
 router.route('/password/reset/:token').post(passwordReset);
 router.route('/userDashboard').get(isLoggedIn, getLoggedInUserDetails);
+router.route('/password/update').post(isLoggedIn, changePassword);
 
 module.exports = router;
